Multiple fixes and changes